--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         run: ./gradlew build
 
       - name: Set up Docker
-        uses: docker/setup-docker@v1
+        uses: byloth/docker-setup-action@v1
 
       - name: Start Docker daemon
         run: |
