add loan e2e test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=${env.DB_USER}
 spring.datasource.password=${env.DB_PASSWORD}
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 server.servlet.context-path=/api/v1
