--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 
+cors.allowed-origins= "*"
+cors.allowed-methods= "*"
+cors.allowed-headers= "*"
+cors.exposed-headers= "*"
+
 server.servlet.context-path=/api/v1
+jwt.secret=${env.JWT_Key}
