--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 
-cors.allowed-origins= "*"
-cors.allowed-methods= "*"
+cors.allowed-origins= "http://localhost:3000,http://localhost:5000"
+cors.allowed-methods= "GET, POST, PUT, DELETE"
 cors.allowed-headers= "*"
 cors.exposed-headers= "*"
 
-server.servlet.context-path=/api/v1
+#server.servlet.context-path=/api/v1
 jwt.secret=${env.JWT_Key}
